; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pci-xgene-msi.c_xgene_msi_set_affinity.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pci-xgene-msi.c_xgene_msi_set_affinity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i64 }
%struct.cpumask = type { i32 }

@IRQ_SET_MASK_OK_DONE = common dso_local global i32 0, align 4
@IRQ_SET_MASK_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.irq_data*, %struct.cpumask*, i32)* @xgene_msi_set_affinity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgene_msi_set_affinity(%struct.irq_data* %0, %struct.cpumask* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.irq_data*, align 8
  %6 = alloca %struct.cpumask*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %5, align 8
  store %struct.cpumask* %1, %struct.cpumask** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.cpumask*, %struct.cpumask** %6, align 8
  %11 = call i32 @cpumask_first(%struct.cpumask* %10)
  store i32 %11, i32* %8, align 4
  %12 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  %13 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @hwirq_to_cpu(i64 %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* @IRQ_SET_MASK_OK_DONE, align 4
  store i32 %20, i32* %4, align 4
  br label %32

21:                                               ; preds = %3
  %22 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  %23 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i64 @hwirq_to_canonical_hwirq(i64 %24)
  %26 = load i32, i32* %8, align 4
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %25, %27
  %29 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  %30 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %29, i32 0, i32 0
  store i64 %28, i64* %30, align 8
  %31 = load i32, i32* @IRQ_SET_MASK_OK, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %21, %19
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @cpumask_first(%struct.cpumask*) #1

declare dso_local i32 @hwirq_to_cpu(i64) #1

declare dso_local i64 @hwirq_to_canonical_hwirq(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
